fixed the logo to be more reactive on mobile

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -61,7 +61,7 @@
 
 #logo {
   color: $footch-dark-orange;
-  font-size: 40px;
+  font-size: 30px;
     &:hover{
     background-color: transparent;
     text-decoration:none;
@@ -107,8 +107,8 @@
   flex-shrink: 3;
 }
 
-#logo {
-  font-size: 30px;
+#si-navbar-two.dropdown {
+  margin-left: 200px;
 }
 
 #si-navbar-one {
